# Tetris

./: CMakeLists.txt  README.md  线性规划 final.pptx
data/: data_14f.txt  data_30f.txt  data_5f.txt  out2.txt
src/: CMakeLists.txt  climb.cpp  compare.py  decide.cpp  decide.h  evaluate.cpp  flow.py  game.cpp  game.h  logic.cpp  match.py  mkdata.cpp  replay.cpp  savedata.cpp  tetris.cpp  util.cpp  util.h
