set(CMAKE_CXX_STANDARD 11)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
#ADD_EXECUTABLE(tetris tetris.cpp jsoncpp.cpp game.cpp util.cpp evaluate.cpp decide.cpp)
#ADD_EXECUTABLE(logic logic.cpp jsoncpp.cpp game.cpp)
#ADD_EXECUTABLE(replay replay.cpp jsoncpp.cpp game.cpp)
ADD_EXECUTABLE(mkdata mkdata.cpp game.cpp util.cpp evaluate.cpp decide.cpp jsoncpp.cpp)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
#ADD_EXECUTABLE(savedata savedata.cpp)
#target_link_libraries(savedata Threads::Threads)
ADD_EXECUTABLE(climb climb.cpp)
target_link_libraries(climb Threads::Threads)
